# generative_models

./: README.md
diffusion_model/: README.md  main.ipynb  pyproject.toml  sde.py  trainer.py  ultility.py
diffusion_model/trained/: gmm_mlp_diffusion.pt  gmm_mlp_fm.pt
flow_matching/: README.md  gaussian.py  main.ipynb  ode.py  pyproject.toml  trainer.py  ultility.py
unguided_mnist_fm/: README.md  main.ipynb  pyproject.toml  ultility.py  unet.py
